grammar.js
    compilation_unit: $ => seq(
      optional($.shebang),
      optional($._definitions)
    ),

    _definitions: $ => seq(
      repeat(';;'),
      choice($._module_item, $.toplevel_directive, seq($._seq_expression, repeat($.item_attribute))),
      repeat(choice(
        seq(repeat(';;'), choice($._module_item, $.toplevel_directive)),
        seq(repeat1(';;'), seq($._seq_expression, repeat($.item_attribute)))
      )),
      repeat(';;')
    ),

    // Toplevel

    _module_item: $ => choice(
      $.value_specification,
      $.value_definition,
      $.external,
      $.type_definition,
      $.exception_definition,
      $.module_definition,
      $.module_type_definition,
      $.open_statement,
      $.include_statement,
      $.class_definition,
      $.class_type_definition,
      $.floating_attribute,
      $.item_extension
    ),

    value_definition: $ => seq(
      choice(
        seq('let', optional($._extension_attribute), optional('rec')),
        $.let_operator
      ),
      sep1(
        choice(
          seq('and', repeat($.attribute)),
          $.and_operator
        ),
        $.let_binding
      )
    ),

    let_binding: $ => seq(
      $._pattern,
      repeat($.parameter),
      optional(seq(':', $._poly_type)),
      optional(seq(':>', $._type)),
      '=',
      $._seq_expression,
      repeat($.item_attribute)
    ),

    type_definition: $ => seq(
      'type', optional($._extension_attribute), optional('nonrec'),
      sep1(seq('and', repeat($.attribute)), $.type_binding)
    ),

    type_binding: $ => seq(
      optional($.type_params),
      choice(
        seq(
          $._type_constructor,
          optional($._type_equation),
          optional(seq(
            '=',
            optional('private'),
            choice(
              $.variant_declaration,
              $.record_declaration,
              '..'
            )
          )),
          repeat($.type_constraint)
        ),
        seq(
          $.type_constructor_path,
          seq(
            '+=',
            optional('private'),
            $.variant_declaration,
          )
        )
      ),
      repeat($.item_attribute)
    ),

    _type_equation: $ => seq(
      choice('=', ':='),
      optional('private'),
      $._type
    ),

    variant_declaration: $ => choice(
      seq('|', sep('|', $.constructor_declaration)),
      sep1('|', $.constructor_declaration)
    ),

    constructor_declaration: $ => seq(
      choice(
        $._constructor_name,
        seq('[', ']'),
        parenthesize('::')
      ),
      optional(choice(
        seq('of', $.constructor_argument),
        seq(':', $._simple_type),
        seq(':', $.constructor_argument, '->', $._simple_type),
        seq('=', $.constructor_path)
      )),
      repeat($.attribute)
    ),

    record_declaration: $ => seq(
      '{',
      sep1(seq(';', repeat($.attribute)), $.field_declaration),
      optional(seq(';', repeat($.attribute))),
      '}'
    ),

    field_declaration: $ => seq(
      optional('mutable'),
      $._field_name,
      ':',
      $._poly_type,
    ),

    exception_definition: $ => seq(
      'exception',
      $.constructor_declaration,
      repeat($.item_attribute)
    ),

    module_definition: $ => seq(
      'module', optional($._extension_attribute), optional('rec'),
      sep1(seq('and', repeat($.attribute)), $.module_binding)
    ),

    module_binding: $ => seq(
      $._module_name,
      repeat($.module_parameter),
      optional(seq(':', $._module_type)),
      optional(seq('=', $._module_expression)),
      repeat($.item_attribute)
    ),

    module_parameter: $ => parenthesize(optional(seq(
      choice($._module_name, alias('_', $._module_name)),
      ':',
      $._module_type
    ))),

    module_type_definition: $ => seq(
      'module', 'type',
      optional($._extension_attribute),
      $._module_type_name,
      optional(seq('=', $._module_type)),
      repeat($.item_attribute)
    ),

    open_statement: $ => seq(
      'open',
      optional('!'),
      optional($._extension_attribute),
      $._module_expression,
      repeat($.item_attribute)
    ),

    _module_type: $ => prec.right(seq(
      choice(
        $.module_type_path,
        $.signature,
        $.module_type_constraint,
        $.module_type_of,
        $.functor_type,
        $.parenthesized_module_type,
        $.extension
      ),
      repeat($.attribute)
    )),

    _module_expression: $ => prec.dynamic(1, prec.right(seq(
      choice(
        $._module_name,
        $.structure,
        $.functor,
        $.module_application,
        $.submodule,
        $.typed_module_expression,
        $.packed_module,
        $.parenthesized_module_expression,
        $.extension
      ),
      repeat($.attribute)
    ))),

    structure: $ => seq(
      'struct',
      repeat($.attribute),
      optional($._definitions),
      'end'
    ),

    functor: $ => seq(
      'functor',
      repeat($.module_parameter),
      '->',
      $._module_expression
    ),

    module_application: $ => prec(2, seq(
      $._module_expression,
      parenthesize(optional($._module_expression))
    )),

    submodule: $ => prec.left(1, seq(
      $._module_expression, '.', $._module_expression
    )),

    typed_module_expression: $ => parenthesize(seq(
      $._module_expression,
      ':',
      $._module_type
    )),

    packed_module: $ => parenthesize(seq(
      'val',
      repeat($.attribute),
      $._expression,
      optional(seq(':', $._module_type)),
      optional(seq(':>', $._module_type))
    )),

    parenthesized_module_expression: $ => parenthesize($._module_expression),

    // Class types

    _poly_type: $ => seq(
      optional(seq($.polymorphic_types, '.')),
      $._type
    ),

    _simple_type: $ => choice(
      $.type_variable,
      $.type_constructor_path,
      $.constructed_type,
      $.polymorphic_variant_type,
      $.package_type,
      $.hash_type,
      $.object_type,
      $.parenthesized_type,
      $.extension
    ),

    _type: $ => prec.right(seq(
      choice(
        $._simple_or_tuple_type,
        $.function_type,
        $.aliased_type
      ),
      repeat($.attribute)
    )),

    _simple_expression: $ => choice(
      $.value_path,
      $._constant,
      seq('begin', optional($._extension_attribute), $._seq_expression, 'end'),
      $.typed_expression,
      $.constructor_path,
      $.tag,
      $.list_expression,
      $.array_expression,
      $.record_expression,
      $.prefix_expression,
      alias($._hash_expression, $.infix_expression),
      $.field_get_expression,
      $.array_get_expression,
      $.string_get_expression,
      $.bigarray_get_expression,
      $.coercion_expression,
      $.local_open_expression,
      $.package_expression,
      $.new_expression,
      $.object_copy_expression,
      $.method_invocation,
      $.parenthesized_expression,
      $.ocamlyacc_value,
      $.extension
    ),

    _expression: $ => prec.right(seq(
      choice(
        $._simple_expression,
        $.product_expression,
        $.cons_expression,
        $.application_expression,
        $.infix_expression,
        alias($._sign_expression, $.prefix_expression),
        $.set_expression,
        $.if_expression,
        $.while_expression,
        $.for_expression,
        $.match_expression,
        $.function_expression,
        $.fun_expression,
        $.try_expression,
        $.let_expression,
        $.assert_expression,
        $.lazy_expression,
        $.let_module_expression,
        $.let_open_expression,
        $.let_exception_expression,
        $.object_expression
      ),
      repeat($.attribute)
    )),

    _seq_expression: $ => choice(
      $._expression,
      $.sequence_expression
    ),

    typed_expression: $ => parenthesize(seq(
      $._seq_expression,
      ':',
      $._type
    )),

    product_expression: $ => prec.left(PREC.prod, seq(
      $._expression,
      ',',
      $._expression
    )),

    cons_expression: $ => prec.right(PREC.cons, seq(
      $._expression,
      '::',
      $._expression
    )),

    list_expression: $ => seq(
      '[',
      optional(seq(
        sep1(';', $._expression),
        optional(';')
      )),
      ']'
    ),

    array_expression: $ => seq(
      '[|',
      optional(seq(
        sep1(';', $._expression),
        optional(';')
      )),
      '|]'
    ),

    record_expression: $ => seq(
      '{',
      optional(seq($._simple_expression, 'with')),
      sep1(';', $.field_expression),
      optional(';'),
      '}'
    ),

    field_expression: $ => prec.left(PREC.seq, seq(
      $.field_path,
      optional(seq(':', $._type)),
      optional(seq('=', $._expression))
    )),

    application_expression: $ => prec.right(PREC.app, seq(
      $._simple_expression,
      repeat1($._argument)
    )),

    _argument: $ => choice(
      $._simple_expression,
      $.label,
      $.labeled_argument
    ),

    labeled_argument: $ => seq(
      $.label,
      token.immediate(':'),
      $._simple_expression
    ),

    prefix_expression: $ => prec(PREC.prefix, seq(
      $.prefix_operator,
      $._simple_expression
    )),

    infix_expression: $ => {
      const table = [
        {
          operator: $._pow_operator,
          precedence: PREC.pow,
          associativity: 'right'
        },
        {
          operator: $._mult_operator,
          precedence: PREC.mult,
          associativity: 'left'
        },
        {
          operator: $._add_operator,
          precedence: PREC.add,
          associativity: 'left'
        },
        {
          operator: $._concat_operator,
          precedence: PREC.concat,
          associativity: 'right'
        },
        {
          operator: $._rel_operator,
          precedence: PREC.rel,
          associativity: 'left'
        },
        {
          operator: $._and_operator,
          precedence: PREC.and,
          associativity: 'right'
        },
        {
          operator: $._or_operator,
          precedence: PREC.or,
          associativity: 'right'
        },
        {
          operator: $._assign_operator,
          precedence: PREC.assign,
          associativity: 'right'
        }
      ]

      return choice(...table.map(({operator, precedence, associativity}) =>
        prec[associativity](precedence, seq(
          $._expression,
          alias(operator, $.infix_operator),
          $._expression
        ))
      ))
    },

    field_get_expression: $ => prec.left(PREC.dot, seq(
      $._simple_expression,
      '.',
      $.field_path
    )),

    array_get_expression: $ => prec(PREC.dot, seq(
      $._simple_expression,
      '.',
      optional($.indexing_operator_path),
      '(',
      $._seq_expression,
      ')'
    )),

    string_get_expression: $ => prec(PREC.dot, seq(
      $._simple_expression,
      '.',
      optional($.indexing_operator_path),
      '[',
      $._seq_expression,
      ']'
    )),

    bigarray_get_expression: $ => prec(PREC.dot, seq(
      $._simple_expression,
      '.',
      optional($.indexing_operator_path),
      '{',
      $._seq_expression,
      '}'
    )),

    set_expression: $ => prec.right(PREC.assign, seq(
      choice(
        $.field_get_expression,
        $.array_get_expression,
        $.string_get_expression,
        $.bigarray_get_expression,
        $._instance_variable_name
      ),
      '<-',
      $._expression
    )),

    if_expression: $ => prec.right(PREC.if, seq(
      'if',
      optional($._extension_attribute),
      $._seq_expression,
      $.then_clause,
      optional($.else_clause)
    )),

    then_clause: $ => seq(
      'then',
      $._expression
    ),

    else_clause: $ => seq(
      'else',
      $._expression
    ),

    while_expression: $ => seq(
      'while',
      optional($._extension_attribute),
      $._seq_expression,
      $.do_clause
    ),

    do_clause: $ => seq(
      'do',
      optional($._seq_expression),
      'done'
    ),

    for_expression: $ => seq(
      'for',
      optional($._extension_attribute),
      $.value_name,
      '=',
      $._seq_expression,
      choice('to', 'downto'),
      $._seq_expression,
      $.do_clause
    ),

    sequence_expression: $ => prec.right(PREC.seq, seq(
      $._expression,
      ';',
      optional(seq(
        optional(seq('%', $.attribute_id)),
        $._seq_expression
      ))
    )),

    match_expression: $ => prec.right(PREC.match, seq(
      choice(
        seq('match', optional($._extension_attribute)),
        $.match_operator
      ),
      $._seq_expression,
      'with',
      $._match_cases
    )),

    _match_cases: $ => prec.right(seq(
      optional('|'),
      sep1('|', $.match_case)
    )),

    match_case: $ => seq(
      $._pattern_or_exception,
      optional(seq('when', $._seq_expression)),
      '->',
      choice($._seq_expression, $.refutation_case)
    ),

    function_expression: $ => prec.right(PREC.match, seq(
      'function',
      optional($._extension_attribute),
      $._match_cases
    )),

    try_expression: $ => prec.right(PREC.match, seq(
      'try',
      optional($._extension_attribute),
      $._seq_expression,
      'with',
      $._match_cases
    )),

    let_expression: $ => prec.right(PREC.match, seq(
      $.value_definition,
      'in',
      $._seq_expression
    )),

    coercion_expression: $ => parenthesize(seq(
      $._expression,
      optional(seq(':', $._type)),
      ':>',
      $._type
    )),

    assert_expression: $ => prec.left(PREC.app, seq(
      'assert',
      optional($._extension_attribute),
      $._simple_expression
    )),

    lazy_expression: $ => prec.left(PREC.app, seq(
      'lazy',
      optional($._extension_attribute),
      $._simple_expression
    )),

    let_module_expression: $ => prec.right(PREC.match, seq(
      'let',
      $.module_definition,
      'in',
      $._seq_expression
    )),

    let_open_expression: $ => prec.right(PREC.match, seq(
      'let',
      $.open_statement,
      'in',
      $._seq_expression
    )),

    local_open_expression: $ => seq(
      $._module_name,
      '.',
      choice(
        parenthesize($._seq_expression),
        $.list_expression,
        $.array_expression,
        $.record_expression,
        $.object_copy_expression,
        $.local_open_expression
      )
    ),

    package_expression: $ => parenthesize(seq(
      'module',
      optional($._extension_attribute),
      $._module_expression,
      optional(seq(':', $._module_type))
    )),

    let_exception_expression: $ => prec.right(PREC.match, seq(
      'let',
      $.exception_definition,
      'in',
      $._seq_expression
    )),

    parenthesized_expression: $ => parenthesize($._seq_expression),

    _pattern_or_exception: $ => choice(
      $._pattern,
      seq($.exception_pattern, repeat($.attribute))
    ),

    _pattern: $ => prec.right(seq(
      choice(
        $._simple_pattern,
        $.alias_pattern,
        $.or_pattern,
        $.constructor_pattern,
        $.tag_pattern,
        $.tuple_pattern,
        $.cons_pattern,
        $.range_pattern,
        $.lazy_pattern
      ),
      repeat($.attribute)
    )),

    or_pattern: $ => prec.left(PREC.seq, seq(
      $._pattern,
      '|',
      $._pattern
    )),

    constructor_pattern: $ => prec.right(PREC.app, seq(
      $.constructor_path,
      $._pattern
    )),

    exception_pattern: $ => seq(
      'exception',
      optional($._extension_attribute),
      $._pattern
    ),

    // Attributes and extensions

    attribute: $ => seq('[@', $.attribute_id, optional($.attribute_payload), ']'),

    item_attribute: $ => seq('[@@', $.attribute_id, optional($.attribute_payload), ']'),

    floating_attribute: $ => seq('[@@@', $.attribute_id, optional($.attribute_payload), ']'),

    extension: $ => seq('[%', $.attribute_id, optional($.attribute_payload), ']'),

    number: $ => NUMBER,

    _assign_operator: $ => choice(':='),
