corpus/comments.txt
==============================
Comments
==============================

(**)
(* *)
(**
  doc
*)
( *)

---

(compilation_unit
  (comment)
  (comment)
  (comment)
  (value_path (value_name (infix_operator))))

==============================
Nested comments
==============================

(* (* *) *)

---

(compilation_unit (comment (comment)))

==============================
Strings and comments
==============================

(* "*)" *)
"(**)"

---

(compilation_unit
  (comment (string))
  (string))

==============================
Characters and comments
==============================

(* '"' *)
(* f' '"' *)
(*  *)
(* '\o170' '"' *)
(* '\'"' *)
(* '\" " *)
(* '" " *)
(* '*)
x

---

(compilation_unit
  (comment (character))
  (comment (character))
  (comment)
  (comment (character) (character))
  (comment (character))
  (comment (string))
  (comment (string))
  (comment)
  (value_path (value_name)))
